--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/features.html"></include>
+    <include src="./partials/solutions.html"></include>
   </body>
 </html>
