--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/features.html"></include>
     <include src="./partials/solutions.html"></include>
+    <include src="./partials/cases.html"></include>
   </body>
 </html>
