--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/features.html"></include>
     <include src="./partials/solutions.html"></include>
-    <include src="./partials/cases.html"></include>
+    <include src="./partials/сases.html"></include>
+    <include src="./partials/blog.html"></include>
   </body>
 </html>
