--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,22 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/features.html"></include>
-    <include src="./partials/solutions.html"></include>
-    <include src="./partials/сases.html"></include>
-    <include src="./partials/blog.html"></include>
+    <include src="./partials/header-logo.html"></include>
+    <include src="./partials/header-nav.html"></include>
+    <include src="./partials/hero-txt.html"></include>
+    <include src="./partials/hero-btn.html"></include>
+    <include src="./partials/activities.html"></include>
+    <include src="./partials/solutions-img.html"></include>
+    <include src="./partials/solutions-txt.html"></include>
+    <include src="./partials/сases-txt.html"></include>
+    <include src="./partials/cases-list.html"></include>
+    <include src="./partials/blog-txt.html"></include>
+    <include src="./partials/blog-img.html"></include>
+    <include src="./partials/team-txt.html"></include>
+    <include src="./partials/team-list.html"></include>
+    <include src="./partials/callback-img.html"></include>
+    <include src="./partials/callback-form.html"></include>
+    <include src="./partials/footer-icons.html"></include>
+    <include src="./partials/footer-txt.html"></include>
   </body>
 </html>
