--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,8 @@
     <include src="./partials/callback-form.html"></include>
     <include src="./partials/footer-icons.html"></include>
     <include src="./partials/footer-txt.html"></include>
+    <include src="./partials/footer.html"></include>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
