Add section colaborators

--- a/src/index.html
+++ b/src/index.html
@@ -9,26 +9,65 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <!-- <include src="./partials/example.html"></include> -->
+
+    <!-- andriideikalo • Collaborator -->
     <include src="./partials/header-logo.html"></include>
+
+    <!-- ArtemGR1987 • Collaborator -->
     <include src="./partials/header-nav.html"></include>
+
+    <!-- doroshenko27 • Collaborator -->
     <include src="./partials/hero-txt.html"></include>
+
+    <!-- Evgen198912 -->
     <include src="./partials/hero-btn.html"></include>
+
+    <!-- EvgenyVeliki Collaborator -->
     <include src="./partials/activities.html"></include>
+
+    <!-- hhomebb • Collaborator -->
     <include src="./partials/solutions-img.html"></include>
+
+    <!-- IgorN1989 • Collaborator -->
     <include src="./partials/solutions-txt.html"></include>
+
+    <!-- IhorYakymchuk Collaborator -->
     <include src="./partials/сases-txt.html"></include>
+
+    <!-- irynakrykun Collaborator -->
     <include src="./partials/cases-list.html"></include>
+
+    <!-- Iuriius • Collaborator -->
     <include src="./partials/blog-txt.html"></include>
+
+    <!-- KuznecovAndrey7777777 Collaborator -->
     <include src="./partials/blog-img.html"></include>
+
+    <!-- MaxHorban • Collaborator -->
     <include src="./partials/team-txt.html"></include>
+
+    <!-- NataliiaVKravchuk Collaborator -->
     <include src="./partials/team-list.html"></include>
+
+    <!-- NataliiyChervonnykh • Collaborator -->
     <include src="./partials/callback-img.html"></include>
+
+    <!-- NytrammartyN Collaborator -->
     <include src="./partials/callback-form.html"></include>
+
+    <!-- Oksana-Zakhariia • Collaborator -->
     <include src="./partials/footer-icons.html"></include>
+
+    <!-- OleksandrDukach Collaborator -->
     <include src="./partials/footer-txt.html"></include>
+
+    <!-- OlgaShapran Collaborator -->
     <include src="./partials/footer.html"></include>
 
+    <!-- SvitlanaChudak Collaborator -->
+    <include src="./partials/example.html"></include>
+
+    <!-- VitaliySaburdo Collaborator -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
